[project]
name = "Prism AI"
version = "0.1.0"
description = "A multimodal AI platform for chat, image generation, vision, audio transcription, TTS & video analysis — powered by Groq · HuggingFace · Gemini · OpenRouter. Built with Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.19",
    "datasets>=2.19.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gradio-client>=2.5.0",
    "gtts>=2.5.4",
    "huggingface-hub>=0.36.2",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "matplotlib>=3.10.9",
    "moviepy>=2.0.0",
    "mteb>=1.12.5",
    "nltk>=3.9.4",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=10.2.0",
    "pyyaml>=6.0.3",
    "rank-bm25==0.2.2",
    "requests>=2.34.2",
    "scikit-learn==1.4.2",
    "scipy==1.11.4",
    "sentence-transformers==2.7.0",
    "streamlit>=1.57.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.41.0",
]
